# my-notes-backend

./: .gitignore  Dockerfile  gunicorn.conf.py  pyproject.toml
notes_service/: main.py
notes_service/api/endpoints/: notes.py
notes_service/config/: constants.py  logging.py  settings.py
notes_service/database/connection/: db_connection.py
notes_service/database/models/: notes.py
notes_service/errors/: notes_errors.py
notes_service/repositories/: notes_repository.py
notes_service/schema/: notes.py
notes_service/services/: file_service.py  notes_service.py
notes_service/upload_files/content/: mains.jfif
